# recipes

./: .gitignore  README.md  llm_recipe_client.py  recipe_server.py  requirements.txt
.github/workflows/: backend-ci.yml
backend/: .gitignore  README.md  Taskfile.yml  pyproject.toml
backend/src/recipes/: main.py
backend/src/recipes/scrapper/: constants.py  scrapper.py  search_results_parser.py  url_builder.py  url_cache.py  url_fetcher.py
backend/tests/: test_recipes.py
backend/tests/scrapper/: conftest.py  test_scrapper.py  test_search_results_parser.py  test_url_builder.py  test_url_cache.py  test_url_fetcher.py
backend/tests/scrapper/data/: tatin_endives_search_results_page_2.html
scripts/: load_recipes.py
