[project]
name = "recipes"
version = "0.1"
description = "A backend fetching and serving recipes"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "beautifulsoup4",
]

[project.optional-dependencies]
test = ["pytest", "pytest-mock", "pytest-cov"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=recipes"

[tool.coverage.run]
branch = true
omit = ["__init__.py", "main.py"]